Bug 379459 - Krusader no longer minimizes to system tray.
Summary: Krusader no longer minimizes to system tray.
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Bikadorov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-02 23:44 UTC by lnxusr
Modified: 2017-05-08 04:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lnxusr 2017-05-02 23:44:39 UTC
When closing with the 'X' in whichever corner it's set to be in, Krusader exits the program instead of minimizing to the tray like it should.  Checking 'Minimize to tray' selected in the General settings has no effect on this action.
Comment 1 Alex Bikadorov 2017-05-03 11:32:50 UTC
"Minimize to tray" does what it says: *minimizing* to tray. See Bug 350920.

I assume you want a "close to tray" option?
Comment 2 Michal Kec (MiK) 2017-05-04 11:00:11 UTC
Thank you Alex for mentioning the relevant bug. I'm very excited with reintroduced feature "minimize to tray" in Krusader 2.6.0! 

However I do agree with the reporter here and with the comments in bug 350920 that the previous behavior (as in Krusader 2.4.0 on KDE 4) is more convenient. I  also believe it is common behavior among apps with "minimize to tray" feature (i.e. Amarok, Clementine, various instant messaging apps).

Well, maybe the correct label should be "Minimize to tray instead of quit". :-)
Comment 3 Alex Bikadorov 2017-05-04 12:42:20 UTC
If I didn't miscount, there are 4 people now who want the old behaviour back ("Minimize" minimizes, "close" closes to tray").

I'm totally fine with it and if there is nobody out there, who likes the current behaviour better (please say so), I will replace it. Otherwise another user option and more code is needed - more work for me.

>I  also believe it is common behavior among apps with "minimize to tray" feature (i.e. Amarok, Clementine, various instant messaging apps).

Thats indeed a strong argument. However, Amarok has no option for "minimize/close to tray" (does it automatically) and Clementine has named it with "close". So, yes, renaming it to "close to tray" makes more sense.
Comment 4 lnxusr 2017-05-04 18:33:08 UTC
Yes, please do bring back the close to tray behavior, I really don't like the minimize to tray option in any application.  I often use the icon in the task manager to temporarily hide the window then click again to bring it back up.  With minimize to tray the icon is removed from the task manager when minimized and I now have to go to the tray and find it, often having to click the arrow to show hidden icons.

Thank you Alex for responding to this so quickly.
Comment 5 Michal Kec (MiK) 2017-05-05 14:50:41 UTC
Thank you Alex for actively taking this issue!

> If I didn't miscount, there are 4 people now who want the old behaviour back
> ("Minimize" minimizes, "close" closes to tray").

Just for the record I can describe the old behavior as I can see that with Krusader 2.4.0 on KDE 4 (Kubuntu 14.04 LTS):
- When "Minimize to tray" checked, both minimizing and closing the window (using both "X" or Alt-F4) just minimize the app to the systray (thus no icon in the taskbar).
- Actually I can see the icon in the systray all the time, even if the window is not minimized.
- The app is terminated only by selecting "Quit" in the File menu.
Comment 6 Alex Bikadorov 2017-05-05 17:31:01 UTC
I would go for "minimize" really only minimizes (and does not close to tray). This is the behaviour most other applications with a tray icon have. 

And yes, the icon will always be visible (if closed, minimized or open) (if the "close to tray" option is activated).
Comment 7 Alex Bikadorov 2017-05-07 20:46:55 UTC
Git commit 77b7e9406e08c1f47dbbcb3c4f171a7c9f49ef6d by Alexander Bikadorov.
Committed on 07/05/2017 at 20:46.
Pushed by abikadorov into branch 'master'.

Replaced tray icon setting and behaviour: minimize to tray -> close to tray

With tray, close events from window manager are only hiding the window. Direct
quit is possible with File->Quit, tray->Quit, or "F10".

If setting "Close to tray" is set, tray icon is always visible. If not and
setting "start to tray" is set, icon is removed after first window show.

FIXED: [ 379459 ] Krusader no longer minimizes to system tray.

M  +1    -0    krusader/ActionMan/CMakeLists.txt
M  +1    -1    krusader/Konfigurator/kggeneral.cpp
M  +1    -1    krusader/Konfigurator/kgstartup.cpp
M  +1    -0    krusader/UserAction/CMakeLists.txt
M  +1    -1    krusader/defaults.h
M  +2    -2    krusader/kractions.cpp
M  +4    -1    krusader/krslots.cpp
M  +59   -63   krusader/krusader.cpp
M  +13   -9    krusader/krusader.h

https://commits.kde.org/krusader/77b7e9406e08c1f47dbbcb3c4f171a7c9f49ef6d
Comment 8 lnxusr 2017-05-08 04:10:28 UTC
Thank you Alex, works great now, just as expected.