Replaced tray icon setting and behaviour: minimize to tray -> close to tray

With tray, close events from window manager are only hiding the window. Direct
quit is possible with File->Quit, tray->Quit, or "F10".

If setting "Close to tray" is set, tray icon is always visible. If not and
setting "start to tray" is set, icon is removed after first window show.

FIXED: [ 379459 ] Krusader no longer minimizes to system tray.
BUG: 379459